DQN, clean up notebook names, start DDPG

--- a/RNN_supervised.ipynb
+++ b/RNN_supervised.ipynb
@@ -6,7 +6,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imports\n"
+    "# imports\n",
+    "import math, random\n",
+    "\n",
+    "# import gym\n",
+    "import numpy as np\n",
+    "import gym\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import torch.autograd as autograd \n",
+    "import torch.nn.functional as F\n",
+    "from collections import deque\n",
+    "\n",
+    "from IPython.display import clear_output\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -15,7 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define the task"
+    "USE_CUDA = torch.cuda.is_available()\n",
+    "Variable = lambda *args, **kwargs: autograd.Variable(*args, **kwargs).cuda() if USE_CUDA else autograd.Variable(*args, **kwargs)"
    ]
   },
   {
@@ -23,7 +39,139 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class MonkRNN(nn.Module):\n",
+    "    def __init__(self, inp_size, n_neurons, out_size, rnn_nonlinearity = 'relu',curl_field=False):\n",
+    "        super(MonkRNN, self).__init__()\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        # simplify\n",
+    "        \n",
+    "        # input -> ReLU RNN -> Linear -> ReLU -> Linear -> Curl field and friction  -> output (velocity x, velocity y)\n",
+    "        \n",
+    "        # Loss - squared error with target velocity + l2 regularization on all parameters\n",
+    "\n",
+    "        self.inp_size = inp_size\n",
+    "        self.out_size = out_size\n",
+    "        self.n_neurons = n_neurons\n",
+    "        self.init_hidden_state = nn.Parameter(torch.zeros(1, n_neurons))\n",
+    "\n",
+    "        # Inputs are:\n",
+    "        \n",
+    "        # Recurrent layer parameters.\n",
+    "        self.rnn = nn.RNNCell(input_size=n_neurons,hidden_size=n_neurons,nonlinearity=rnn_nonlinearity)\n",
+    "        self.rnn.weight_hh.data.normal_(0, 2 / np.sqrt(n_neurons))\n",
+    "\n",
+    "        # Output layer parameters\n",
+    "        self.out_layer = nn.Sequential(nn.Linear(n_neurons, n_neurons), nn.ReLU(), nn.Linear(n_neurons, out_size))\n",
+    "        self.out_layer[0].weight.data.normal_(0, 1.5 / np.sqrt(n_neurons))\n",
+    "        self.out_layer[2].weight.data.normal_(0, 1.5 / np.sqrt(n_neurons))\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "    def forward(self, inp, curl, h_old=None):\n",
+    "        \"\"\"\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        inp : torch.tensor\n",
+    "            Hand and target positions. Has shape (7,).\n",
+    "            (go, hand_x, hand_y, curr_tgx, curr_tgy, next_tgx, next_tgy)\n",
+    "        hidden : torch.tensor\n",
+    "            Initial firing rates. Has shape (n_neurons,)\n",
+    "        task_info : torch.tensor\n",
+    "            tensor holding (go, curr_tgx, curr_tgy, next_tgx, next_tgy)\n",
+    "\n",
+    "        Returns\n",
+    "        -------\n",
+    "        acc : torch.tensor\n",
+    "            has shape (2,) corresponding to x and y acceleration.\n",
+    "        hiddens : torch.tensor\n",
+    "            has shape (n_neurons,) corresponding network activity.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        if h_old is None:\n",
+    "            h_old = self.init_hidden_state\n",
+    "\n",
+    "        # Update RNN one time step.\n",
+    "        h_new = self.rnn(inp, h_old)\n",
+    "\n",
+    "        # Collect RNN output (acceleration of hand).\n",
+    "        dv = self.out_layer(h_new)\n",
+    "        \n",
+    "        dv = dv + curl\n",
+    "        \n",
+    "        \n",
+    "        # print(\"hidden {}, Acc {}\".format(h_new, acc))\n",
+    "        return dv, h_new\n",
+    "    \n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GenerateInputTargetTimeseries():\n",
+    "    def __init__(self, screen_size):\n",
+    "        super(TeacherHandDynamics, self).__init__()\n",
+    "       \n",
+    "    def initialize(self, hx, hy):\n",
+    "        self.hx = torch.tensor([hx])\n",
+    "        self.hy = torch.tensor([hy])\n",
+    "        self.vx = torch.zeros(1)\n",
+    "        self.vy = torch.zeros(1)\n",
+    "        \n",
+    "\n",
+    "    def forward(self, acc, targ_loc):\n",
+    "        \"\"\"\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        acc : torch.tensor\n",
+    "            has shape (2,) correspond to (ax, ay)\n",
+    "        targ_loc : torch.tensor\n",
+    "            location of the current target\n",
+    "        \n",
+    "        Returns\n",
+    "        -------\n",
+    "        hand : torch.tensor\n",
+    "            has shape (2,) corresponding to (hx, hy).\n",
+    "        \"\"\"\n",
+    "        acc = acc.squeeze()\n",
+    "        \n",
+    "        hx = self.hx.item()\n",
+    "        hy = self.hy.item()\n",
+    "        tgx = targ_loc[0].item()\n",
+    "        tgy = targ_loc[1].item()\n",
+    "\n",
+    "        # Teacher direction\n",
+    "        errx = (tgx - hx)\n",
+    "        erry = (tgy - hy)\n",
+    "        self.int_errx += 0.9 * errx\n",
+    "        self.int_erry += 0.9 * erry\n",
+    "        \n",
+    "        teach_x = 0.01 * self.int_errx + PROP_GAIN * errx\n",
+    "        teach_y = 0.01 * self.int_erry + PROP_GAIN * erry\n",
+    "\n",
+    "        # Add teacher contribution\n",
+    "        ax = teach_x * self.teacher_scale + acc[0] * (1 - self.teacher_scale)\n",
+    "        ay = teach_y * self.teacher_scale + acc[1] * (1 - self.teacher_scale)\n",
+    "\n",
+    "        self.vx = self.vx / self.friction + ax\n",
+    "        self.vy = self.vy / self.friction + ay\n",
+    "        self.hx = torch.clamp(self.hx + self.vx, .1, self.screen_size - .1)\n",
+    "        self.hy = torch.clamp(self.hy + self.vy, .1, self.screen_size - .1)\n",
+    "        print(teach_x,teach_y,acc)\n",
+    "        teacher_loss = torch.clamp((teach_x - acc[0]) ** 2 + (teach_y - acc[1]) ** 2,-10,10)\n",
+    "\n",
+    "        return (\n",
+    "            torch.cat((self.hx, self.hy)),\n",
+    "            teacher_loss,\n",
+    "            torch.tensor([teach_x, teach_y]),\n",
+    "        )"
+   ]
   }
  ],
  "metadata": {
