--- a/DebuggingNotebooks/TabularRLSolution.ipynb
+++ b/DebuggingNotebooks/TabularRLSolution.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,14 +38,14 @@
     "ALPHA = .5\n",
     "EPSILON=0.1\n",
     "EPISODES = 10000\n",
-    "NPIXELX,NPIXELY = 11,11\n",
+    "NPIXELX,NPIXELY = 25,25\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,9 +58,6 @@
     "        self.npixely = npixely\n",
     "        self.wind = False\n",
     "        self.wind_vec=[0,0]\n",
-    "#         self.actionx = [-1,0,1]\n",
-    "#         self.actiony = [-1,0,1]\n",
-    "        \n",
     "        self._init_qfunc()\n",
     "        \n",
     "        self.actions = [[-1,0],\n",
@@ -76,11 +73,11 @@
     "        self.Q = {}\n",
     "        for hposy in range(self.npixelx):\n",
     "            for hposx in range(self.npixely):\n",
-    "                self.Q[(hposy,hposx)]={}\n",
+    "                self.Q[(hposy,hposx)]= np.random.randn(8)\n",
     "                \n",
-    "                for tposy in range(self.npixelx):\n",
-    "                    for tposx in range(self.npixely):\n",
-    "                        self.Q[(hposy,hposx)][(tposy,tposx)]= np.random.randn(8)\n",
+    "#                 for tposy in range(self.npixelx):\n",
+    "#                     for tposx in range(self.npixely):\n",
+    "#                         self.Q[(hposy,hposx)][(tposy,tposx)]= np.random.randn(8)\n",
     "                        \n",
     "    def init_hand_pos(self,y,x):\n",
     "        self.hand_pos = [y,x]\n",
@@ -91,29 +88,18 @@
     "        self.targ_pos=[y,x]\n",
     "                                \n",
     "   \n",
-    "    def get_Q(self,hpos,tpos):\n",
-    "        return self.Q[tuple(hpos)][tuple(tpos)]\n",
+    "    def get_Q(self,hpos):\n",
+    "        return self.Q[tuple(hpos)]\n",
     "\n",
     "    \n",
     "    \n",
     "                        \n",
-    "\n",
-    "\n",
-    "# self position, target position, q function  as attributes\n",
-    "\n",
-    "# function update self position\n",
-    "\n",
-    "# function update target position\n",
-    "\n",
-    "# current q function\n",
-    "\n",
-    "# update q \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,23 +111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "episode 0 0\n",
-      "episode 1000 13\n",
-      "episode 2000 10\n",
-      "episode 3000 10\n",
-      "episode 4000 13\n",
-      "episode 5000 10\n",
-      "episode 6000 10\n",
-      "episode 7000 11\n",
-      "episode 8000 10\n",
-      "episode 9000 10\n"
+      "episode 0 0\n"
      ]
     }
    ],
@@ -155,10 +132,10 @@
     "\n",
     "    # init state\n",
     "    h.init_hand_pos(0,5)\n",
-    "    h.init_targ_pos(10,5)\n",
+    "    h.init_targ_pos(25,5)\n",
     "\n",
     "    #     define terminal state\n",
-    "    if ep%1000 ==0:\n",
+    "    if ep%10 ==0:\n",
     "        print('episode',ep,counter)\n",
     "\n",
     "    counter = 0\n",
@@ -168,7 +145,7 @@
     "        if np.random.rand()<EPSILON:\n",
     "            a = np.random.randint(8)\n",
     "        else:\n",
-    "            a= np.argmax(h.get_Q(h.hand_pos,h.targ_pos))\n",
+    "            a= np.argmax(h.get_Q(h.hand_pos))\n",
     "\n",
     "    \n",
     "    #         print('a',ay,ax)\n",
@@ -182,7 +159,7 @@
     "        else:\n",
     "            reward = 0\n",
     "        rewards.append(reward)\n",
-    "        h.Q[tuple(h_old)][tuple(h.targ_pos)][a] += ALPHA*(reward + np.amax(h.get_Q(h.hand_pos,h.targ_pos)) - h.get_Q(h_old,h.targ_pos)[a])\n",
+    "        h.Q[tuple(h_old)][a] += ALPHA*(reward + np.amax(h.get_Q(h.hand_pos)) - h.get_Q(h_old)[a])\n",
     "\n",
     "        counter+=1\n",
     "    COUNTERS.append(counter)\n",
